callgrind-utils/tests/snapshots/rust_callgraph__fractal_rs_folded.snap
---
source: tests/rust_callgraph.rs
expression: "graph.to_folded_without_costs().join(\"\\n\")"
---
run_measured <cost>
run_measured;complex_fractal_benchmark <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;analyze_fractal_tree'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;collect_leaves <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;collect_leaves;collect_leaves'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;collect_leaves;collect_leaves'2;collect_leaves'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;compute_complexity_score <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;compute_complexity_score;recursive_path_score <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;compute_variance <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;count_nodes <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;count_nodes;count_nodes'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;count_nodes;count_nodes'2;count_nodes'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;max_path_sum <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;max_path_sum;max_path_sum'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;max_path_sum;max_path_sum'2;max_path_sum'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;recursive_sum <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;analyze_fractal_tree'2;??? <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;collect_leaves <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;collect_leaves;collect_leaves'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;collect_leaves;collect_leaves'2;collect_leaves'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;compute_variance <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;count_nodes <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;count_nodes;count_nodes'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;count_nodes;count_nodes'2;count_nodes'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;max_path_sum <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;max_path_sum;max_path_sum'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;max_path_sum;max_path_sum'2;max_path_sum'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;recursive_sum <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;recursive_sum;recursive_sum'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;recursive_sum;recursive_sum'2;recursive_sum'2 <cost>
run_measured;complex_fractal_benchmark;analyze_fractal_tree;??? <cost>
run_measured;complex_fractal_benchmark;build_fractal <cost>
run_measured;complex_fractal_benchmark;build_fractal;build_fractal'2 <cost>
run_measured;complex_fractal_benchmark;build_fractal;build_fractal'2;build_fractal'2 <cost>
run_measured;complex_fractal_benchmark;build_fractal;build_fractal'2;compute_child_value <cost>
run_measured;complex_fractal_benchmark;build_fractal;build_fractal'2;compute_tree_hash <cost>
run_measured;complex_fractal_benchmark;build_fractal;build_fractal'2;compute_tree_hash;compute_tree_hash'2 <cost>
run_measured;complex_fractal_benchmark;build_fractal;build_fractal'2;compute_tree_hash;compute_tree_hash'2;compute_tree_hash'2 <cost>
run_measured;complex_fractal_benchmark;build_fractal;build_fractal'2;pool_alloc <cost>
run_measured;complex_fractal_benchmark;build_fractal;compute_tree_hash <cost>
run_measured;complex_fractal_benchmark;build_fractal;compute_tree_hash;compute_tree_hash'2 <cost>
run_measured;complex_fractal_benchmark;build_fractal;compute_tree_hash;compute_tree_hash'2;compute_tree_hash'2 <cost>
run_measured;complex_fractal_benchmark;compute_tree_hash <cost>
run_measured;complex_fractal_benchmark;compute_tree_hash;compute_tree_hash'2 <cost>
run_measured;complex_fractal_benchmark;compute_tree_hash;compute_tree_hash'2;compute_tree_hash'2 <cost>
run_measured;complex_fractal_benchmark;fibonacci_memo <cost>
run_measured;complex_fractal_benchmark;fibonacci_memo;fibonacci_memo'2 <cost>
run_measured;complex_fractal_benchmark;fibonacci_memo;fibonacci_memo'2;fibonacci_memo'2 <cost>
run_measured;complex_fractal_benchmark;??? <cost>
